Quick fix to homepage layout bug

--- a/wp-content/themes/cae/assets/css/main.css
+++ b/wp-content/themes/cae/assets/css/main.css
@@ -2373,6 +2373,9 @@ body {
           height: 168px; } }
 
 @media (min-width: 992px) {
+  .home .main .container {
+    max-width: 1001px;
+    padding: 0; }
   .banner .container {
     padding: 0; } }
 
