--- a/wp-content/themes/cae/assets/scss/global/_layout.scss
+++ b/wp-content/themes/cae/assets/scss/global/_layout.scss
@@ -112,8 +112,8 @@ body {
 @media (min-width:$screen-md-min) {
 	.main .container {
 		.home & {
-			//max-width:1001px;
-			//padding: 0;
+			max-width:1001px;
+			padding: 0;
 		}
 	}	
 	.banner .container {
